--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Evin Rizwan",
   "license": "ISC",
   "dependencies": {
+    "all": "0.0.0",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
