--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Evin Rizwan",
   "license": "ISC",
   "dependencies": {
+    "all": "0.0.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
